Add config options and links for Email and Skype buttons.

--- a/config/theme.config.json
+++ b/config/theme.config.json
@@ -74,8 +74,10 @@
         "newsletter": "disabled",
         "newsletterMailchimpURL": "",
         "newsletterFormCode": "<form>...</form>",
-        "copyrightText": "Email: career@elenadries.com | Skype: elenadries",
+        "copyrightText": "Powered by Publii",
         "socialButtons": true,
+        "socialEmail": "career@elenadries.com",
+        "socialSkype": "elenadries",
         "socialFacebook": "https://www.facebook.com/elena.dries",
         "socialTwitter": "",
         "socialInstagram": "",
